
- Never recreate an empty dink.dat in the game, even if there's a
  problem opening it (avoids potential corruption when running both
  the game and an editor at the same time).

- Fix portability when saving a FreeDinkedit screen for the first time

- Fix 'make_global_function' and 'load_map' DinkC functions

- sp_custom returns 0 rather than -1 if the lookup key doesn't exist

* Developer notes:

- Move to C++


108.4
=====

- Never recreate an empty hard.dat in the game, even if there's a
  problem opening it (avoids corruption when running both the game and
  an editor at the same time).
  (thanks CocoMonkey for the report)

- DinkC: load_palette() now searches for palette in the right place
  (thanks scratcher for the report)

- DinkC: Dink position is updated after a new screen is loaded
  (thanks metatarasal for the report)

- New translations for the engine strings in Russian (thanks Yuri
  Kozlov) and Hungarian (thanks Balázs Úr).


108.2
=====

* User-visible changes:

- New, simple versioning scheme, without scary .20YYMMDD date.

- Properly play Dink's intro screen music (see below).

- FreeDinkedit plays sounds on Windows.

- New translation for the engine strings in Brazilian Portuguese
  (thanks Enrico Nicoletto)

- Update translations of the engine strings
  (thanks Translation Project)

- 64-bit support for Windows.

* Developer notes:

- Properly play Dink's intro screen music: the original game actually
  tries both 3.mid and 1003.mid for playmidi("1003.mid").

- Improved build documentation.

- Display SDL audio driver in debug mode.

- Add AppStream/AppData file for GNU/Linux software centers.


1.08.20121209
=============

* User-visible changes:

- Fix game freeze when warping in some special situations, such as
  when lots of sprites are created; this bug was present in the
  original Dink (thanks Bas Wijnen)

- New translation for the engine strings in Catalan (thanks Àngel
  Mompó) and Basque (thanks Gorka Azkarate Zubiaur)
